--- a/index.html
+++ b/index.html
@@ -286,15 +286,16 @@
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-12">
-                  <h2 class="display-6 mb-5" data-scroll-reveal="enter top move 50px over 0.8s after 0.2s">We are a trusted car spare parts seller, offering high-quality parts for all major brands at affordable prices.</h2>
+                  <h2 class="display-7 mb-5" data-scroll-reveal="enter top move 50px over 0.8s after 0.2s">At HAT UAE, we export high-quality auto parts to clients worldwide. With strong industry experience and a focus on reliability, we connect manufacturers with global buyers. Our products cover a wide range of vehicle brands and include aftermarket parts for engines, suspension, brakes, electricals, and more.
+                </h2>
                 </div>
                 <div class="col-lg-6" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-                  <div class="display-1 fw-bold py-4" style="font-size: xx-large;">Quality</div>
-                  <p class="text-black-50">We offer both genuine and aftermarket parts, each selected for its reliability and performance. Every product undergoes strict quality checks, ensuring only the best for our customers.</p>
+                  <div class="display-1 fw-bold py-4" style="font-size: xx-large;">Our Services</div>
+                  <p class="text-black-50">Based in Dubai, we offer competitive pricing, fast delivery, and personalized customer support. Every order is carefully checked to meet high-quality standards and delivered safely and on time.</p>
                 </div>
                 <div class="col-lg-6" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-                  <div class="display-1 fw-bold py-4" style="font-size: xx-large;">Service</div>
-                  <p class="text-black-50">Our dedicated team is always ready to offer expert advice and fast delivery. We prioritize customer satisfaction and aim to be your go-to partner for all automotive spare parts.</p>
+                  <div class="display-1 fw-bold py-4" style="font-size: xx-large;">Your Trusted Partner</div>
+                  <p class="text-black-50">Whether you are a distributor, retailer, or service center, Highland Auto Traders UAE is your reliable partner in the global auto parts supply chain.</p>
                 </div>
               </div>
             </div>
