--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 1.0s">
               <div class="feature_item" data-number="5">
                 <img src="assets/images/delivery-truck.png" style="height: 80px;" alt="">
-                <h4>Track Your Shipments</h4>
+                <h4>Track Shipments</h4>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 1.2s">
