--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="col-lg-6">
               <div class="row">
                 <div class="col-12">
-                  <h2 class="display-7 mb-5" data-scroll-reveal="enter top move 50px over 0.8s after 0.2s">At HAT UAE, we export high-quality auto parts to clients worldwide. With strong industry experience and a focus on reliability, we connect manufacturers with global buyers. Our products cover a wide range of vehicle brands and include aftermarket parts for engines, suspension, brakes, electricals, and more.
+                  <h2 class="display-7 mb-5" style="font-size: x-large;" data-scroll-reveal="enter top move 50px over 0.8s after 0.2s">At HAT UAE, we export high-quality auto parts to clients worldwide. With strong industry experience and a focus on reliability, we connect manufacturers with global buyers. Our products cover a wide range of vehicle brands and include aftermarket parts for engines, suspension, brakes, electricals, and more.
                 </h2>
                 </div>
                 <div class="col-lg-6" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
@@ -340,37 +340,37 @@
           </div>
           <div class="row feature_inner" >
             <div class="col-lg-4 col-md-6 col-sm-6 col-6"  data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s" >
-              <div class="feature_item" data-number="1">
+              <div class="feature_item" >
                 <img src="assets/images/tap.png" style="height: 80px;" alt="">
                 <h4>Contact Us</h4>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.4s">
-              <div class="feature_item" data-number="2">
+              <div class="feature_item" >
                 <img src="assets/images/check-out.png" style="height: 80px;" alt="">
                 <h4>Place an Order</h4>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.6s">
-              <div class="feature_item" data-number="3">
+              <div class="feature_item" >
                 <img src="assets/images/credit-card.png" style="height: 80px;" alt="">
                 <h4>Secure Payment</h4>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.8s">
-              <div class="feature_item" data-number="4">
+              <div class="feature_item" >
                 <img src="assets/images/invoice.png" style="height: 80px;" alt="">
                 <h4>Invoices Generated</h4>
               </div>
-            </div>
+            </div>  
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 1.0s">
-              <div class="feature_item" data-number="5">
+              <div class="feature_item" >
                 <img src="assets/images/delivery-truck.png" style="height: 80px;" alt="">
                 <h4>Track Shipments</h4>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-6 col-6 hh" data-scroll-reveal="enter bottom move 50px over 0.6s after 1.2s">
-              <div class="feature_item" data-number="6">
+              <div class="feature_item" >
                 <img src="assets/images/delivered.png" style="height: 80px;" alt="">
                 <h4>Order Delivered</h4>
               </div>
@@ -433,8 +433,8 @@
                     Condition</p>
               </div>
               <div class="flip-card-back">
-                <!-- <img src="https://via.placeholder.com/80" alt="Back Icon"> -->
-                <!-- <h3>100 Contributors</h3> -->
+                <img src="assets/images/dependable.png" alt="Back Icon">
+                <h3>Fast and Reliable Global Shipping</h3>
                 <!-- <p>Up to 200 projects</p> -->
                 <!-- <p>Beta Access</p> -->
               </div>
