--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <meta name="keywords" content="Car Spare Parts, Auto Parts Export, UAE Car Parts, Genuine Auto Parts, Aftermarket Parts, OEM Spare Parts, Highland Auto Traders, Automotive Exporter, Car Parts Supplier UAE,Highland,Highland Auto,Spare Parts,SpareParts,Spareparts">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
+
+    <link href="assets/images/logo123.png" rel="icon">
+    <link href="assets/images/logo123.png" rel="">
     
 
     <!-- Additional CSS Files -->
