--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div class="offset-xl-3 col-xl-6 offset-lg-2 col-lg-8 col-md-12 col-sm-12">
                         <h1 data-scroll-reveal="enter top move 50px over 0.6s after 0.2s"><strong>Genuine Parts,</strong>Perfect Fit for Your Car</h1>
                         <p data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s" style="font-size: medium;">Your trusted source for high-quality, authentic spare parts</p>
-                        <a  data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"href="#features" class="btn-custom">Contact Now</a>
+                        <a href="https://wa.me/971508942248?text=Hi%20Highland%20Auto%20Traders" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"href="#features" class="btn-custom">Contact Now</a>
                     </div>
                 </div>
 
@@ -269,7 +269,7 @@
                         </div>
                         <div class="py-3">
                             <h3>For All Brands</h3>
-                            <a data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"href="#features" class="btn-custom my-3" >Contact Now</a>
+                            <a href="https://wa.me/971508942248?text=Hi%20Highland%20Auto%20Traders" data-scroll-reveal="enter bottom move 50px over 0.6s after 0.2s"href="#features" class="btn-custom my-3" >Contact Now</a>
                         </div>
                     </div>
                 </div>
