--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
     <link href="assets/images/logo123.png" rel="icon">
-    <link href="assets/images/logo123.png" rel="">
+    <!-- <link href="assets/images/logo123.png" rel=""> -->
     
 
     <!-- Additional CSS Files -->
@@ -102,6 +102,7 @@
                             </li> -->
                             <!-- <li class="mobile-only"><a href="#services">Services</a></li> -->
                             <li><a href="#about11">About</a></li>
+                            <li><a href="visionandmission.html">Vision And Mission</a></li>
                             <li><a href="#service">Service</a></li>
                             <li><a href="#contact">Contact Us</a></li>
                         </ul>
