--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Highland Auto Traders – Trusted Car Spare Parts Exporter from UAE</title>
     <meta name="description" content="Highland Auto Traders is a leading exporter of genuine, aftermarket, and OEM car spare parts from the UAE to global markets. We ensure quality, reliability, and fast delivery. Contact us at +971 50 894 2248.">
-    <meta name="keywords" content="Car Spare Parts, Auto Parts Export, UAE Car Parts, Genuine Auto Parts, Aftermarket Parts, OEM Spare Parts, Highland Auto Traders, Automotive Exporter, Car Parts Supplier UAE,Highland,Highland Auto,Spare Parts,SpareParts,Spareparts">
+    <meta name="keywords" content="Car Spare Parts, Auto Parts Export, UAE Car Parts, Genuine Auto Parts, Aftermarket Parts, OEM Spare Parts, Highland Auto Traders, Automotive Exporter, Car Parts Supplier UAE,Highland,Highland Auto,Spare Parts,SpareParts,Spareparts,Buy auto parts online,Auto parts supplier near me,Wholesale car parts distributor,Aftermarket auto parts supplier,Genuine auto parts online,Performance auto parts for sale,Auto spare parts wholesale,Affordable replacement parts,Bulk auto parts for repair shops,Cheap engine parts supplier,Online store for truck parts,Where to buy auto parts online,auto transmission parts online,Auto parts distributor for garages,Wholesale vehicle parts for auto shops,Fleet vehicle parts supplier,Car parts export supplier,Automotive parts importer/exporter,How to identify quality auto parts,Benefits of buying auto parts online,Best auto parts brands">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
 
