--- a/index.html
+++ b/index.html
@@ -560,10 +560,10 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12">
                     <ul class="social">
-                        <li><a href="#" style="color: #cecccc;"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#" style="color: #cecccc;"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#" style="color: #cecccc;"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#" style="color: #cecccc;"><i class="fa fa-whatsapp"></i></a></li>
+                        <li><a  style="color: #cecccc;"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com/hatuae_01/" style="color: #cecccc;"><i class="fa fa-instagram"></i></a></li>
+                        <li><a href="http://www.linkedin.com/in/highland-auto-traders-447a1b366" style="color: #cecccc;"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://wa.me/971508942248?text=Hi%20Highland%20Auto%20Traders" style="color: #cecccc;"><i class="fa fa-whatsapp"></i></a></li>
                     </ul>
                 </div>
             </div>
