--- a/visionandmission.html
+++ b/visionandmission.html
@@ -161,7 +161,7 @@
                     <ul class="social">
                         <li><a  style="color: #cecccc;"><i class="fa fa-facebook"></i></a></li>
                         <li><a href="https://www.instagram.com/hatuae_01/" style="color: #cecccc;"><i class="fa fa-instagram"></i></a></li>
-                        <li><a href="http://www.linkedin.com/in/highland-auto-traders-447a1b366" style="color: #cecccc;"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="https://www.linkedin.com/company/107128104" style="color: #cecccc;"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="https://wa.me/971508942248?text=Hi%20Highland%20Auto%20Traders" style="color: #cecccc;"><i class="fa fa-whatsapp"></i></a></li>
                     </ul>
                 </div>
